--- a/clase 10/ejercicio.html
+++ b/clase 10/ejercicio.html
@@ -8,7 +8,24 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+      <header>
+        <nav class="menu-container">
+            <a href="#">Home</a>
+            <ul>
+                <li class="menuItem">
+                    <a href="#">Link1</a>
+                </li>
+                <li>
+                    <a href="#">Link2</a>
+                </li>
+            </ul>
+        </nav>
+        <img src="./assets/img/imagen.jpg" alt="">
+      </header>
+<main>
+
+
+    </aside>
     <section id="sec1">
     <div class="content-text">
         <h2>Section 1</h2>
@@ -39,7 +56,7 @@
         <img src="./assets/img/3.svg" alt="">
 
     </section>
-
+</main>
 </body>
 
 </html>
